<resources>
    <string name="app_name">Pokemon Search</string>
    <string name="action_settings">Settings</string>
    <string name="name">Введите имя</string>
    <string name="last_name">Введите фамилию</string>
    <string name="age">Введите возраст</string>
    <string name="textview_name">Имя :</string>
    <string name="textview_last">Тип :</string>
    <string name="textview_age">Вид :</string>
    <string name="textview_weight">Вес :</string>
    <string name="textview_height">Рост :</string>
    <string name="textview_id">Идентификатор в справочнике :</string>
    <string name="textview_info">Дополнительная информация о возможных формах :</string>
    <string name="btn_enter">Ввести</string>
    <string name="title_activity_second">SecondActivity</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="close">Закрыть</string>
</resources>
